examples/invalid/30_effect_alias_private_effect_escape.lane
module Examples.Invalid.EffectAliasPrivateEffectEscape

effect Console {
  read() -> Int
}

pub type UI = { Console }

pub let bad : Int = 42
